--- a/Caffeine/Caffeine.csproj
+++ b/Caffeine/Caffeine.csproj
@@ -69,16 +69,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caffeine.cs" />
+    <Compile Include="EditWhitelist.cs" />
+    <Compile Include="EditWhitelist.Designer.cs">
+      <DependentUpon>EditWhitelist.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProcessInput.cs" />
+    <Compile Include="ProcessInput.Designer.cs">
+      <DependentUpon>ProcessInput.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EditWhitelist.resx">
+      <DependentUpon>EditWhitelist.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProcessInput.resx">
+      <DependentUpon>ProcessInput.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
